# matrix

./: .gitignore  Makefile  README.md  meson.build
include/: matrix.h
src/: inverse.c  matrix.c  solve.c
test/: main.c  reduce_inverse.c  solve.c  solve_numerical.c
